# second-brain

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: CLAUDE.md  PDR.MD  TEST_REVIEW_TODOS.md  TODOS.MD  USAGE.md  design.md  docs.code-workspace  plan.md  system-review-todos.md  system-review.md
second_brain/: __init__.py
second_brain/agents/: challenger.py  curator.py  ingestion.py  synthesis.py
second_brain/cli/: main.py
second_brain/core/: constants.py  models.py  utils.py
second_brain/core/rules/: confidence.py  contradictions.py  decay.py  lifecycle.py
second_brain/core/services/: ask.py  audit.py  beliefs.py  edges.py  notes.py  reports.py  signals.py
second_brain/integrations/: telegram.py
second_brain/runtime/: dispatcher.py  scheduler.py
second_brain/storage/: snapshot.py  sqlite.py  vector.py
second_brain/storage/migrations/: 001_initial_schema.sql  002_fts5.sql  003_beliefs.sql  004_edges.sql  005_embeddings.sql  runner.py
tests/: conftest.py  test_audit.py  test_beliefs.py  test_challenger.py  test_cli.py  test_curator.py  test_dispatcher.py  test_e2e.py  test_edges.py  test_ingestion.py  test_integration.py  test_lifecycle.py  test_models.py  test_notes.py  test_phase0.py  test_phase1.py  test_phase2.py  test_rules.py  test_scheduler.py  test_signals.py  test_storage.py  test_synthesis.py  test_telegram.py  test_utils.py  test_vector.py
