[project]
name = "second-brain"
version = "0.1.0"
description = "A local, persistent cognitive substrate for structured knowledge management"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
vectors = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.scripts]
brain = "second_brain.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
