[project]
name = "second-brain"
version = "0.1.0"
description = "A local, persistent cognitive substrate"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6,<3",
    "click>=8.1,<9",
]

[project.scripts]
sb = "second_brain.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.3,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
